{
  "version": 4,
  "terraform_version": "1.11.3",
  "serial": 5,
  "lineage": "63100abf-2e92-870f-9897-339b05099fcb",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06b89be69be6715de",
            "arn": "arn:aws:ec2:us-east-1:792394825927:elastic-ip/eipalloc-06b89be69be6715de",
            "domain": "vpc",
            "id": "eipalloc-06b89be69be6715de",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-98-86-228-166.compute-1.amazonaws.com",
            "public_ip": "98.86.228.166",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "my-project-eks-cluster-nat-1"
            },
            "tags_all": {
              "Name": "my-project-eks-cluster-nat-1"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07a5ecf2050197282",
            "arn": "arn:aws:ec2:us-east-1:792394825927:elastic-ip/eipalloc-07a5ecf2050197282",
            "domain": "vpc",
            "id": "eipalloc-07a5ecf2050197282",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-18-232-220-12.compute-1.amazonaws.com",
            "public_ip": "18.232.220.12",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "my-project-eks-cluster-nat-2"
            },
            "tags_all": {
              "Name": "my-project-eks-cluster-nat-2"
            },
            "vpc": true
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06c28bc367270d71e",
            "arn": "arn:aws:ec2:us-east-1:792394825927:elastic-ip/eipalloc-06c28bc367270d71e",
            "domain": "vpc",
            "id": "eipalloc-06c28bc367270d71e",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-231-195-99.compute-1.amazonaws.com",
            "public_ip": "3.231.195.99",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "my-project-eks-cluster-nat-3"
            },
            "tags_all": {
              "Name": "my-project-eks-cluster-nat-3"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:792394825927:internet-gateway/igw-08d6aa1e9e709941f",
            "id": "igw-08d6aa1e9e709941f",
            "owner_id": "792394825927",
            "tags": {
              "Name": "my-project-eks-cluster-igw"
            },
            "tags_all": {
              "Name": "my-project-eks-cluster-igw"
            },
            "vpc_id": "vpc-0255f6735c226e192"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06b89be69be6715de",
            "association_id": "eipassoc-03aee71c3be9ca2c4",
            "connectivity_type": "public",
            "id": "nat-0f0d7e62b7cdfcfe5",
            "network_interface_id": "eni-0b68936125b1c83f0",
            "private_ip": "10.0.4.135",
            "public_ip": "98.86.228.166",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0dc5f3a55af85d6de",
            "tags": {
              "Name": "my-project-eks-cluster-nat-1"
            },
            "tags_all": {
              "Name": "my-project-eks-cluster-nat-1"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07a5ecf2050197282",
            "association_id": "eipassoc-0710954622d459aa2",
            "connectivity_type": "public",
            "id": "nat-05f72c667008f6571",
            "network_interface_id": "eni-008bfb0a7cba01514",
            "private_ip": "10.0.5.166",
            "public_ip": "18.232.220.12",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-087928c66505ba67a",
            "tags": {
              "Name": "my-project-eks-cluster-nat-2"
            },
            "tags_all": {
              "Name": "my-project-eks-cluster-nat-2"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06c28bc367270d71e",
            "association_id": "eipassoc-0b07efd8832903aff",
            "connectivity_type": "public",
            "id": "nat-043c1f0ca0c51e49a",
            "network_interface_id": "eni-05d0f2f4628a2a70a",
            "private_ip": "10.0.6.80",
            "public_ip": "3.231.195.99",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e41e809deee2ad43",
            "tags": {
              "Name": "my-project-eks-cluster-nat-3"
            },
            "tags_all": {
              "Name": "my-project-eks-cluster-nat-3"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:792394825927:route-table/rtb-0806f894008afccae",
            "id": "rtb-0806f894008afccae",
            "owner_id": "792394825927",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f0d7e62b7cdfcfe5",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-project-eks-cluster-private-1"
            },
            "tags_all": {
              "Name": "my-project-eks-cluster-private-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0255f6735c226e192"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:792394825927:route-table/rtb-074b0cb2eee00d25b",
            "id": "rtb-074b0cb2eee00d25b",
            "owner_id": "792394825927",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-05f72c667008f6571",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-project-eks-cluster-private-2"
            },
            "tags_all": {
              "Name": "my-project-eks-cluster-private-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0255f6735c226e192"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:792394825927:route-table/rtb-08f7e20201834e765",
            "id": "rtb-08f7e20201834e765",
            "owner_id": "792394825927",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-043c1f0ca0c51e49a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-project-eks-cluster-private-3"
            },
            "tags_all": {
              "Name": "my-project-eks-cluster-private-3"
            },
            "timeouts": null,
            "vpc_id": "vpc-0255f6735c226e192"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:792394825927:route-table/rtb-0c863bd6f30fd0775",
            "id": "rtb-0c863bd6f30fd0775",
            "owner_id": "792394825927",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08d6aa1e9e709941f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-project-eks-cluster-public"
            },
            "tags_all": {
              "Name": "my-project-eks-cluster-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0255f6735c226e192"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-037ea72203a9ec967",
            "route_table_id": "rtb-0806f894008afccae",
            "subnet_id": "subnet-0f67f973bbda80e6e"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0871ba30b52e616a4",
            "route_table_id": "rtb-074b0cb2eee00d25b",
            "subnet_id": "subnet-0188d76943632f565"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0579e583c2c0b2899",
            "route_table_id": "rtb-08f7e20201834e765",
            "subnet_id": "subnet-06b37953ba31e319f"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02f63b62dd1762726",
            "route_table_id": "rtb-0c863bd6f30fd0775",
            "subnet_id": "subnet-0dc5f3a55af85d6de"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e3035bc8b26fab79",
            "route_table_id": "rtb-0c863bd6f30fd0775",
            "subnet_id": "subnet-087928c66505ba67a"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-008c51163f7453631",
            "route_table_id": "rtb-0c863bd6f30fd0775",
            "subnet_id": "subnet-0e41e809deee2ad43"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:792394825927:subnet/subnet-0f67f973bbda80e6e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f67f973bbda80e6e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "792394825927",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-project-eks-cluster-private-1",
              "kubernetes.io/cluster/my-project-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "my-project-eks-cluster-private-1",
              "kubernetes.io/cluster/my-project-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0255f6735c226e192"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:792394825927:subnet/subnet-0188d76943632f565",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0188d76943632f565",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "792394825927",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-project-eks-cluster-private-2",
              "kubernetes.io/cluster/my-project-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "my-project-eks-cluster-private-2",
              "kubernetes.io/cluster/my-project-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0255f6735c226e192"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:792394825927:subnet/subnet-06b37953ba31e319f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06b37953ba31e319f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "792394825927",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-project-eks-cluster-private-3",
              "kubernetes.io/cluster/my-project-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "my-project-eks-cluster-private-3",
              "kubernetes.io/cluster/my-project-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0255f6735c226e192"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:792394825927:subnet/subnet-0dc5f3a55af85d6de",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dc5f3a55af85d6de",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "792394825927",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-project-eks-cluster-public-1",
              "kubernetes.io/cluster/my-project-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "my-project-eks-cluster-public-1",
              "kubernetes.io/cluster/my-project-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0255f6735c226e192"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:792394825927:subnet/subnet-087928c66505ba67a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-087928c66505ba67a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "792394825927",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-project-eks-cluster-public-2",
              "kubernetes.io/cluster/my-project-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "my-project-eks-cluster-public-2",
              "kubernetes.io/cluster/my-project-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0255f6735c226e192"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:792394825927:subnet/subnet-0e41e809deee2ad43",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e41e809deee2ad43",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "792394825927",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-project-eks-cluster-public-3",
              "kubernetes.io/cluster/my-project-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "my-project-eks-cluster-public-3",
              "kubernetes.io/cluster/my-project-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0255f6735c226e192"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:792394825927:vpc/vpc-0255f6735c226e192",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09e6ffe3b02a1c09a",
            "default_route_table_id": "rtb-04a0b7b8890c8cc70",
            "default_security_group_id": "sg-06eb73e756c7a6883",
            "dhcp_options_id": "dopt-0f2c833e56983551b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0255f6735c226e192",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04a0b7b8890c8cc70",
            "owner_id": "792394825927",
            "tags": {
              "Name": "my-project-eks-cluster-vpc",
              "kubernetes.io/cluster/my-project-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "my-project-eks-cluster-vpc",
              "kubernetes.io/cluster/my-project-eks-cluster": "shared"
            }
          }
        }
      ]
    }
  ]
}